# Result_prj

./: README.md  pyproject.toml
src/StructResult/: __init__.py  main.py  result.py
test/: test_Result.py
