[build-system]
requires = [
    "setuptools",
    "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "StructResult"
version = "0.4.2"
requires-python = ">= 3.12"
authors = [
    {name="Serj Kotilevski", email="youserj@outlook.com"}
]
dependencies = [
]
description="structural result with exception"
readme = "README.md"
keywords=['result', 'exception']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Source = "https://github.com/youserj/Result_prj"
